# GoHome

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.build.standalone.yml  docker-compose.build.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.githooks/: post-receive  pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: Claude Implementation Plan.md  Initial Requirements.md  troubleshooting.md
sample_config/: config.yml  directory.yml  tailscale.env.example
sample_config/themes/: retro.css
scripts/: generate_screenshots.py
src/gohome/: __init__.py  __main__.py  config.py  models.py  normalize.py  routes.py  themes.py
src/gohome/static/: default.css  gohome.js  retro-amber.css  retro-ansi.css  retro-green.css
src/gohome/templates/: base.html
tailscale/: serve.json
tests/: __init__.py  conftest.py  test_config.py  test_cookies.py  test_edge_cases.py  test_env_vars.py  test_integration.py  test_models.py  test_normalize.py  test_routes.py  test_sample_config.py  test_smoke.py  test_tailscale_headers.py  test_templates.py  test_themes.py
tests/e2e/: __init__.py  conftest.py  test_browser.py
