[project]
name = "gohome"
version = "0.2.2.dev0"
description = "A self-hosted link directory and redirector service"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.20",
    "ruff>=0.11",
    "types-PyYAML>=6.0",
    "types-Flask>=1.1",
]
screenshots = [
    "playwright>=1.40",
]
e2e = [
    "pytest-playwright>=0.6",
]

[project.urls]
Repository = "https://github.com/daftdoki/GoHome"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gohome"]

[tool.uv]
exclude-newer = "2026-04-02T00:00:00Z"

[tool.mypy]
strict = true
python_version = "3.14"
packages = ["gohome"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: End-to-end browser tests (require Playwright)"]

[tool.ruff]
src = ["src"]
